Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <li>Submission Deadline: June 2, 2014</li>
 <li>Acceptance Notification: July 5, 2014</li>
 <li>Camera Ready Manuscript Required: July 11, 2014</li>
+<li>Workshop: Sunday, September 14, 2014 (location TBA)</li>
 </ul><h3>
 <a name="submission-process" class="anchor" href="#submission-process"><span class="octicon octicon-link"></span></a>Submission Process</h3>
 
