Fix up the imic2014 link and create a top level page

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -16,13 +16,13 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/interactivemedical">View on GitHub</a>
 
-          <h1 id="project_title">Interactive MIC</h1>
-          <h2 id="project_tagline">Interactive Medical Image Computing (IMIC) Workshop for MICCAI 2014</h2>
+          <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
+          <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
 
         </header>
     </div>
+
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
@@ -30,7 +30,7 @@
         <h3>
 <a name="welcome-to-imic-2014" class="anchor" href="#welcome-to-imic-2014"><span class="octicon octicon-link"></span></a>Welcome to IMIC 2014</h3>
 
-<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-ons examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  The IMIC workshop seeks to collect the best examples of dynamic interaction with medical imagery.</p>
+<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  The IMIC workshop seeks to collect the best examples of dynamic interaction with medical imagery.</p>
 
 <p>Examples of appropriate topics for IMIC:</p>
 
@@ -55,7 +55,10 @@
 
 <p>We will be using an automated submission management system.  More information to come.</p>
 
-<p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.  The workshop proceedings are expected to represent a cross section of the best available research in this area.  As this is an emerging field that has not been historically well-covered in the MICCAI literature, accepted submissions will set a precedent that can be expected to be widely cited.</p>
+<p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.  
+Workshop presentations are expected to represent a cross section of the best available research in this area.  
+As this is an emerging field that has not been historically well-covered in the MICCAI literature, 
+accepted submissions will set a precedent that can be expected to be widely discussed.</p>
 
 <p>Materials from the workshop will be collated and made available via the <a href="http://InteractiveMedical.org">InteractiveMedical.org</a> web site as a record of the event and a resource to the field.</p>
 
@@ -69,7 +72,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>IMIC 2014 is a project of the <a href="http://interactivemedical.org">Interactive Medical Organization</a></p>
       </footer>
     </div>
 
