--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/interactivemedical">View on GitHub</a>
 
-          <h1 id="project_title">Interactive MIC</h1>
-          <h2 id="project_tagline">Interactive Medical Image Computing (IMIC) Workshop for MICCAI 2014</h2>
+          <h1 id="project_title">Interactive Medical</h1>
+          <h2 id="project_tagline">An Organization Dedicated to <br>Helping Humans and Computers Improve Health</h2>
 
         </header>
     </div>
@@ -28,48 +27,19 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-imic-2014" class="anchor" href="#welcome-to-imic-2014"><span class="octicon octicon-link"></span></a>Welcome to IMIC 2014</h3>
-
-<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-ons examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  The IMIC workshop seeks to collect the best examples of dynamic interaction with medical imagery.</p>
-
-<p>Examples of appropriate topics for IMIC:</p>
-
-<ul>
-<li>Visualization of large multiparametric, multimodal, and/or multisubject imaging data</li>
-<li>Interactive control of image segmentation or registration algorithms</li>
-<li>Software architectures to optimize the use of high-performance computing (e.g. clusters or GPUs)</li>
-<li>Novel interaction or visualization devices such as native 3D displays, head-coupled tracking, hand tracking, gesture detection, custom user input devices and related technologies</li>
-<li>Interactive simulations of body systems, disease processes, and interventions</li>
-<li>Education and training systems that use interactive methods</li>
-<li>Other research that involves interactive computing applied to medical image computing</li>
-</ul><h3>
-<a name="tentative-schedule" class="anchor" href="#tentative-schedule"><span class="octicon octicon-link"></span></a>Tentative Schedule</h3>
-
-<ul>
-<li>Submission Deadline: June 2, 2014</li>
-<li>Acceptance Notification: July 5, 2014</li>
-<li>Camera Ready Manuscript Required: July 11, 2014</li>
-<li>Workshop: Sunday, September 14, 2014 (location TBA)</li>
-</ul><h3>
-<a name="submission-process" class="anchor" href="#submission-process"><span class="octicon octicon-link"></span></a>Submission Process</h3>
-
-<p>We will be using an automated submission management system.  More information to come.</p>
-
-<p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.  The workshop proceedings are expected to represent a cross section of the best available research in this area.  As this is an emerging field that has not been historically well-covered in the MICCAI literature, accepted submissions will set a precedent that can be expected to be widely cited.</p>
-
-<p>Materials from the workshop will be collated and made available via the <a href="http://InteractiveMedical.org">InteractiveMedical.org</a> web site as a record of the event and a resource to the field.</p>
-
-<h3>
-<a name="why-imic" class="anchor" href="#why-imic"><span class="octicon octicon-link"></span></a>Why IMIC?</h3>
-
-<p>The Medical Image Computing literature traditionally favors fully-automated analysis algorithms that offer the potential high throughput, objective, and reproducible results for large data collections.  However fully-automated techniques are not able to handle many time-critical tasks, nor can they handle tasks that require contextual or general knowledge not readily available in the images alone.  This workshop addresses the topic of human interaction with algorithms for initialization, steering, quality control, and visualization for problem domains such as segmentation and registration, object detection, tracking.  The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists.  Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data.  In the call for participation in the workshop we ask for extended abstracts or short papers that are accompanied by live demos.  Our focus will be on original methods and elegant implementations that establish a human-machine dialog.  Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
-      </section>
+          We are the organization behind <a href="./imic2014/index.html">IMIC 2014</a>
+        </h3>
+        <p>Interactive computer systems are widely used in a range of medical applications.
+        The Interactive Medical Organization's mission is to promote interchange of ideas
+        and technologies related to promoting the creation and delivery of interactive
+        systems that can improve health care.</p>
     </div>
+
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <p>Copyright 2014 Interactive Medical</p>
       </footer>
     </div>
 
