Make copyright consistent across pages.

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -73,6 +73,7 @@ accepted submissions will set a precedent that can be expected to be widely disc
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>IMIC 2014 is a project of the <a href="http://interactivemedical.org">Interactive Medical Organization</a></p>
+        <p>Copyright 2014 Interactive Medical Organization</p>
       </footer>
     </div>
 
