--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-      <p>Copyright 2014 Interactive Medical</p>
+        <p>Copyright 2014 Interactive Medical Organization</p>
       </footer>
     </div>
 
