Add organizers section

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -42,22 +42,39 @@
 <li>Interactive simulations of body systems, disease processes, and interventions</li>
 <li>Education and training systems that use interactive methods</li>
 <li>Other research that involves interactive computing applied to medical image computing</li>
-</ul><h3>
-<a name="tentative-schedule" class="anchor" href="#tentative-schedule"><span class="octicon octicon-link"></span></a>Tentative Schedule</h3>
+</ul>
+
+<h3><a name="tentative-schedule" class="anchor" href="#tentative-schedule"><span class="octicon octicon-link"></span></a>Tentative Schedule</h3>
 
 <ul>
 <li>Submission Deadline: June 2, 2014</li>
 <li>Acceptance Notification: July 5, 2014</li>
 <li>Camera Ready Manuscript Required: July 11, 2014</li>
 <li>Workshop: Sunday, September 14, 2014 (location TBA)</li>
-</ul><h3>
-<a name="submission-process" class="anchor" href="#submission-process"><span class="octicon octicon-link"></span></a>Submission Process</h3>
+</ul>
+
+<h3><a name="organizers" class="anchor" href="#organizers"><span class="octicon octicon-link"></span></a>Organizing Committee</h3>
+
+<ul>
+
+
+<li> <a href="http://www.ee.bgu.ac.il/~rrtammy/">Tammy Riklin Raviv</a>, The Department of Electrical and Computer Engineering, Ben-Gurion University </li>
+
+<li> <a href="https://www.spl.harvard.edu/pages/People/pieper">Steve Pieper</a>, Isomics, Inc.</li>
+
+<li> <a href="">Yi Gao</a></li>
+
+<li> <a href="">Bjoern Menze</a></li>
+
+</ul>
+
+<h3><a name="submission-process" class="anchor" href="#submission-process"><span class="octicon octicon-link"></span></a>Submission Process</h3>
 
 <p>We will be using an automated submission management system.  More information to come.</p>
 
-<p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.  
-Workshop presentations are expected to represent a cross section of the best available research in this area.  
-As this is an emerging field that has not been historically well-covered in the MICCAI literature, 
+<p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
+Workshop presentations are expected to represent a cross section of the best available research in this area.
+As this is an emerging field that has not been historically well-covered in the MICCAI literature,
 accepted submissions will set a precedent that can be expected to be widely discussed.</p>
 
 <p>Materials from the workshop will be collated and made available via the <a href="http://InteractiveMedical.org">InteractiveMedical.org</a> web site as a record of the event and a resource to the field.</p>
