--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -64,13 +64,13 @@
 
 <li> <a href="">Yi Gao</a></li>
 
-<li> <a href="">Bjoern Menze</a></li>
+<li> <a href="http://bmenze.de/">Bjoern Menze, TU Munchen</a></li>
 
 </ul>
 
 <h3><a name="submission-process" class="anchor" href="#submission-process"><span class="octicon octicon-link"></span></a>Submission Process</h3>
 
-<p>We will be using an automated submission management system.  More information to come.</p>
+<p>We will be using an automated submission management system.  The conference management URL will be posted before submission the deadline.</p>
 
 <p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
 Workshop presentations are expected to represent a cross section of the best available research in this area.
@@ -78,6 +78,37 @@ As this is an emerging field that has not been historically well-covered in the 
 accepted submissions will set a precedent that can be expected to be widely discussed.</p>
 
 <p>Materials from the workshop will be collated and made available via the <a href="http://InteractiveMedical.org">InteractiveMedical.org</a> web site as a record of the event and a resource to the field.</p>
+
+<h6>Paper format</h6>
+<p>Papers should be formatted using the 
+<a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" title="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" rel="nofollow"><font color="#0066cc">LNCS style files</font></a> 
+and can have up to 8-10 pages, but shorter papers accompanied by videos or live demonstrations 
+will also be given full consideration.<br /></p>
+
+<h6>Parallel Submissions</h6>
+<p>Submitted work has to be 
+original, not identically submitted in parallel to other conferences or 
+workshops. We accept papers that provide further detail on algorithms also 
+validated in the MICCAI challenge workshops. We ask authors to reference
+ the challenge contribution explicitly.<br /></p>
+
+<h6>Review process</h6>
+<p>The review of the papers will be double-blind to the extent physically possible. 
+Submissions should be anonymous according to the MICCAI guidelines.<br /></p>
+
+<h6>Previous MICCAI submissions</h6>
+<p>If desired authors can upload the MICCAI reviews and rebuttal to be considered by the workshop chairs.<br /></p>
+
+<h6>Patent disclosure policy</h6>
+<p>The purpose of the workshop is to exchange ideas and methods to advance the state of medical care. Attendees 
+of the workshop and readers of the proceedings are expected to be able to implement and use the presented methods
+in their own work. 
+<em>Any restrictions on the usability of presented methods,
+whether for commercial or for non-commercial applications, must be disclosed.</em>
+<br /><br />
+This information should be included in a separate section at the end of text in the final ('camera-ready') 
+version of the manuscript, and it will be printed in the proceedings in order to help your readers to 
+make informed decisions.</p>
 
 <h3>
 <a name="why-imic" class="anchor" href="#why-imic"><span class="octicon octicon-link"></span></a>Why IMIC?</h3>
@@ -94,17 +125,18 @@ accepted submissions will set a precedent that can be expected to be widely disc
       </footer>
     </div>
 
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-49071927-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
+    <!-- google analytics  -->
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape(
+        "%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+      try {
+        var pageTracker = _gat._getTracker("UA-49071927-1");
+      pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
 
   </body>
 </html>
