--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a name="welcome-to-imic-2014" class="anchor" href="#welcome-to-imic-2014"><span class="octicon octicon-link"></span></a>Welcome to IMIC 2014</h3>
 
-<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  The IMIC workshop seeks to collect the best examples of dynamic interaction with medical imagery.</p>
+<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  IMIC seeks to showcase and disseminate the best examples of dynamic interaction with medical imagery.</p>
 
 <p>Examples of appropriate topics for IMIC:</p>
 
