STYLE: add yi's website url

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -62,7 +62,7 @@
 
 <li> <a href="https://www.spl.harvard.edu/pages/People/pieper">Steve Pieper</a>, Isomics, Inc.</li>
 
-<li> <a href="">Yi Gao</a></li>
+<li> <a href="https://sites.google.com/site/gaoyicn/">Yi Gao</a></li>
 
 <li> <a href="http://bmenze.de/">Bjoern Menze, TU Munchen</a></li>
 
