--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
+          <img src="../images/imic2014.png">
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
 
         </header>
@@ -25,6 +25,8 @@
 
 
     <!-- MAIN CONTENT -->
+
+
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
