--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -17,7 +17,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <img src="../images/imic2014.png">
+          <!-- <img src="../images/imic2014.png"> -->
+          <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
 
         </header>
