--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -67,7 +67,7 @@
 
 <li> <a href="https://sites.google.com/site/gaoyicn/">Yi Gao</a>, Department of Electrical & Computer Engineering and the Comprehensive Cancer Center, The University of Alabama at Birmingham</li>
 
-<li> <a href="http://bmenze.de/">Bjoern Menze, TU Munchen</a></li>
+<li> <a href="http://bmenze.de/">Bjoern Menze</a>, TU Munchen</li>
 
 </ul>
 
