ENH: two things in the paper format: length and video demo will be given higher priority

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -80,10 +80,19 @@ accepted submissions will set a precedent that can be expected to be widely disc
 <p>Materials from the workshop will be collated and made available via the <a href="http://InteractiveMedical.org">InteractiveMedical.org</a> web site as a record of the event and a resource to the field.</p>
 
 <h6>Paper format</h6>
-<p>Papers should be formatted using the 
-<a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" title="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" rel="nofollow"><font color="#0066cc">LNCS style files</font></a> 
-and can have up to 8-10 pages, but shorter papers accompanied by videos or live demonstrations 
-will also be given full consideration.<br /></p>
+<ul>
+
+
+<li> Papers should be formatted using the 
+<a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" title="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" rel="nofollow"><font color="#0066cc">LNCS style files</font></a>. </li>
+
+<li> Papers should have 4-8 pages, but shorter papers accompanied by videos or live demonstrations will also be given full consideration.</li>
+
+<li> Submission with video demonstration will be given higher priority for oral presentation.</li>
+
+</ul>
+
+<p><br /></p>
 
 <h6>Parallel Submissions</h6>
 <p>Submitted work has to be 
