Add MICCAI logo
Closes #3

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-
+          <img src="../images/MICCAI2014-banner-web.jpg" alt="MICCAI 2014, SEP 14-18, Boston" width="990">
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
