Small wording changes

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -90,7 +90,7 @@ accepted submissions will set a precedent that can be expected to be widely disc
 
 <li> Papers should have 4-8 pages, but shorter papers accompanied by videos or live demonstrations will also be given full consideration.</li>
 
-<li> Submission with video demonstration will be given higher priority for oral presentation.</li>
+<li> Submissions with video and/or proposing live demonstration will be given higher priority for oral presentation.</li>
 
 </ul>
 
