--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -3,8 +3,13 @@
 
   <head>
     <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Interactive MIC : Interactive Medical Image Computing (IMIC) Workshop for MICCAI 2014" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Steve Pieper">
+    <link rel="shortcut icon" href="../images/favicon.ico">
+
 
     <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
 
