Clean up some links and appearance

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -50,19 +50,17 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#submission">Submission</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="#organizers">People</a></li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#topics">Topics</a></li>
+                    <li><a href="#schedule">Schedule</a></li>
                     <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li class="dropdown-header">External Links</li>
+                    <li><a href="http://interactivemedical.org">Interactive Medical</a></li>
+                    <li><a href="http://miccai2014.org">MICCAI</a></li>
                   </ul>
                 </li>
               </ul>
@@ -90,7 +88,7 @@
 
     <div class="container welcome">
           <!-- hardcode 1170 width to match navbar default -->
-          <img src="../images/MICCAI2014-banner-web.jpg" class="img-responsive" alt="MICCAI 2014, SEP 14-18, Boston" width="1170">
+          <img src="../images/MICCAI2014-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2014, SEP 14-18, Boston" width="1170">
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
@@ -101,15 +99,15 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
 
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="../images/divider.svg" alt="~~~~~">
+        <div href="#home" class="col-lg-4">
+          <img src="../images/divider.svg" alt="~~~~~">
           <h2>IMIC</h2>
 <p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  IMIC seeks to showcase and disseminate the best examples of dynamic interaction with medical imagery.</p>
 
         </div><!-- /.col-lg-4 -->
 
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="../images/divider.svg" alt="~~~~~">
+        <div href="#topics" class="col-lg-4">
+          <img src="../images/divider.svg" alt="~~~~~">
           <h2>Topics</h2>
 <p>Visualization of large multiparametric, multimodal, and/or multisubject imaging data</p>
 <p>Interactive control of image segmentation or registration algorithms</p>
@@ -120,8 +118,8 @@
 <p>Other research that involves interactive computing applied to medical image computing</p>
         </div><!-- /.col-lg-4 -->
 
-        <div class="col-lg-4">
-          <img class="img-circle" data-src="../images/divider.svg" alt="~~~~~">
+        <div href="#schedule" class="col-lg-4">
+          <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
 <p>Submission Deadline: June 2, 2014</p>
 <p>Acceptance Notification: July 5, 2014</p>
