--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -76,7 +76,6 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-
         </header>
     </div>
 
@@ -92,6 +91,7 @@
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
+          <h2 id="submissions_open"><a href="https://cmt.research.microsoft.com/IMIC2014"><strong>Online Submissions Now Open</a></strong></h2>
     </div>
 
     <div class="container marketing">
@@ -121,6 +121,7 @@
         <div href="#schedule" class="col-lg-4">
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
+<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
 <p>Submission Deadline: June 2, 2014</p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
@@ -156,8 +157,8 @@
 
 <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Submission Process</h3>
 
-<p>We will be using an automated submission management system.  The conference management URL will be posted before submission the deadline.</p>
-
+<p>We are using an automated submission management system.</p>
+<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
 <p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
 Workshop presentations are expected to represent a cross section of the best available research in this area.
 As this is an emerging field that has not been historically well-covered in the MICCAI literature,
