--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -121,11 +121,24 @@
         <div href="#schedule" class="col-lg-4">
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
+          <h3>Preparation</h3>
 <p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
 <p>Submission Deadline: June 2, 2014</p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
 <p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
+          <h3>Day of the Workshop</h3>
+          <p>8:30 - Welcome (Tammy)</p>
+          <p>8:35 - Ron’s Rules for Tools (Ron Kikinis)</p>
+          <p>9:30 - Presentations Block #1</p>
+          <p>10:30 - Coffee and Demos</p>
+          <p>11:30 - Presentations Block #2</p>
+          <p>12:30-1:30 Lunch</p>
+          <p>1:30 - Allen’s Mathematical Theory of Interaction (Allen Tannenbaum)</p>
+          <p>2:30 - Presentations Block #3</p>
+          <p>3:30 - Coffee and Demos</p>
+          <p>4:30 - Presentation of Awards</p>
+          <p>5:00 - Adjurn</p>
 
         </div><!-- /.col-lg-4 -->
 
