--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -55,8 +55,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="#organizers">People</a></li>
-                    <li><a href="#topics">Topics</a></li>
-                    <li><a href="#schedule">Schedule</a></li>
+                    <li><a href="#why-imic">Why IMIC</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">External Links</li>
                     <li><a href="http://interactivemedical.org">Interactive Medical</a></li>
@@ -101,8 +100,25 @@
 
         <div href="#home" class="col-lg-4">
           <img src="../images/divider.svg" alt="~~~~~">
-          <h2>IMIC</h2>
-<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  IMIC seeks to showcase and disseminate the best examples of dynamic interaction with medical imagery.</p>
+          <h2>Schedule</h2>
+          <h3>Important Dates</h3>
+<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
+<p>Submission Deadline: June 2, 2014</p>
+<p>Acceptance Notification: July 5, 2014</p>
+<p>Camera Ready Manuscript Required: July 11, 2014</p>
+<p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
+          <h3>Day of the Workshop</h3>
+          <p>8:30 - Welcome</p>
+          <p>8:35 - Ron’s Rules for Tools (Ron Kikinis)</p>
+          <p>9:30 - Presentations Block #1</p>
+          <p>10:30 - Coffee and Demos</p>
+          <p>11:30 - Presentations Block #2</p>
+          <p>12:30-1:30 Lunch</p>
+          <p>1:30 - Allen’s Mathematical Theory of Interaction (Allen Tannenbaum)</p>
+          <p>2:30 - Presentations Block #3</p>
+          <p>3:30 - Coffee and Demos</p>
+          <p>4:30 - Presentation of Awards</p>
+          <p>5:00 - Adjurn</p>
 
         </div><!-- /.col-lg-4 -->
 
@@ -120,25 +136,8 @@
 
         <div href="#schedule" class="col-lg-4">
           <img src="../images/divider.svg" alt="~~~~~">
-          <h2>Schedule</h2>
-          <h3>Preparation</h3>
-<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
-<p>Submission Deadline: June 2, 2014</p>
-<p>Acceptance Notification: July 5, 2014</p>
-<p>Camera Ready Manuscript Required: July 11, 2014</p>
-<p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
-          <h3>Day of the Workshop</h3>
-          <p>8:30 - Welcome (Tammy)</p>
-          <p>8:35 - Ron’s Rules for Tools (Ron Kikinis)</p>
-          <p>9:30 - Presentations Block #1</p>
-          <p>10:30 - Coffee and Demos</p>
-          <p>11:30 - Presentations Block #2</p>
-          <p>12:30-1:30 Lunch</p>
-          <p>1:30 - Allen’s Mathematical Theory of Interaction (Allen Tannenbaum)</p>
-          <p>2:30 - Presentations Block #3</p>
-          <p>3:30 - Coffee and Demos</p>
-          <p>4:30 - Presentation of Awards</p>
-          <p>5:00 - Adjurn</p>
+          <h2>IMIC</h2>
+<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  IMIC seeks to showcase and disseminate the best examples of dynamic interaction with medical imagery.</p>
 
         </div><!-- /.col-lg-4 -->
 
@@ -166,6 +165,28 @@
 
 <li> <a href="http://bmenze.de/">Bjoern Menze</a>, TU Munchen</li>
 
+</ul>
+
+
+<h3><a name="programcommittee" class="anchor" href="#programcommittee"><span class="octicon octicon-link"></span></a>Program Committee</h3>
+<ul>
+<li>Koen	Van Leemput</li>
+<li>Kilian	Pohl</li>
+<li>Anastasia	Yendiki</li>
+<li>Demian	Wasserman</li>
+<li>Andriy	Federov</li>
+<li>Jim	Miller</li>
+<li>Marcel	Prastawa</li>
+<li>Ivan	Kolesov</li>
+<li>Peter	Karasev</li>
+<li>Isaiah	Norton</li>
+<li>Dagmar 	Kainmueller</li>
+<li>Florian	Yug</li>
+<li>Moti	Friman</li>
+<li>Sylvain	Bouix</li>
+<li>Yaniv	Gur</li>
+<li>Ender	Konukoglu</li>
+<li>Peter	 Savadjiev</li>
 </ul>
 
 <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Submission Process</h3>
