Add material about supplementary material

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -198,6 +198,8 @@ Workshop presentations are expected to represent a cross section of the best ava
 As this is an emerging field that has not been historically well-covered in the MICCAI literature,
 accepted submissions will set a precedent that can be expected to be widely discussed.</p>
 
+<p>Note that the online submission system allows upload of supplementary files, so you may include a video, links to project information or online content, and/or a description of your live demo.</p>
+
 <p>Materials from the workshop will be collated and made available via the <a href="http://InteractiveMedical.org">InteractiveMedical.org</a> web site as a record of the event and a resource to the field.</p>
 
 <h6>Paper format</h6>
