--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -187,6 +187,7 @@
 <li>Yaniv	Gur</li>
 <li>Ender	Konukoglu</li>
 <li>Peter	 Savadjiev</li>
+<li>Lichao Wang</li>
 </ul>
 
 <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Submission Process</h3>
