Change submission deadline

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -103,7 +103,7 @@
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
 <p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
-<p>Submission Deadline: June 2, 2014</p>
+<p>Submission Deadline: June 9, 2014 <strong>NOTE: 1 week extension!</strong></p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
 <p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
