Make deadline extension more visible on page

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -90,7 +90,7 @@
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
-          <h2 id="submissions_open"><a href="https://cmt.research.microsoft.com/IMIC2014"><strong>Online Submissions Now Open</a></strong></h2>
+          <h2 id="submissions_open"><a href="https://cmt.research.microsoft.com/IMIC2014"><strong>New: Submissions Accepted until June 9, 2014</a></strong></h2>
     </div>
 
     <div class="container marketing">
