Fix spelling of Fedorov

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -174,7 +174,7 @@
 <li>Kilian	Pohl</li>
 <li>Anastasia	Yendiki</li>
 <li>Demian	Wasserman</li>
-<li>Andriy	Federov</li>
+<li>Andriy	Fedorov</li>
 <li>Jim	Miller</li>
 <li>Marcel	Prastawa</li>
 <li>Ivan	Kolesov</li>
