Extend deadline and add paper award announcement

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -90,7 +90,8 @@
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
-          <h2 id="submissions_open"><a href="https://cmt.research.microsoft.com/IMIC2014"><strong>New: Submissions Accepted until June 9, 2014</a></strong></h2>
+          <h2 id="submissions_open"><a href="https://cmt.research.microsoft.com/IMIC2014"><strong>New: Submissions Accepted until <strike>June 9</strike> June 12, 2014</a></strong></h2>
+          <h2>New: $300 Best Paper Award!</h2>
     </div>
 
     <div class="container marketing">
@@ -103,7 +104,7 @@
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
 <p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
-<p>Submission Deadline: June 9, 2014 <strong>NOTE: 1 week extension!</strong></p>
+<p>Submission Deadline: <strike>June 9</strike> June 12, 2014 <strong>NOTE: extension!</strong></p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
 <p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
